--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@ffmpeg/ffmpeg": "^0.12.10",
+    "@ffmpeg/util": "^0.12.1",
     "axios": "^1.6.2",
-    "next": "14.0.4",
+    "next": "^14.1.0",
     "plyr-react": "^5.3.0",
     "react": "^18",
     "react-dom": "^18"
